WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159566
CVE-2016-4707
Clearing LocalStorage doesn't also delete -wal and -shm files
https://bugs.webkit.org/show_bug.cgi?id=159566
Summary
Clearing LocalStorage doesn't also delete -wal and -shm files
Brady Eidson
Reported
2016-07-08 09:42:09 PDT
Clearing LocalStorage doesn't also delete -wal and -shm files This regressed when we enabled WAL logging for our SQLite databases.
Attachments
Patch
(17.14 KB, patch)
2016-07-08 09:44 PDT
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
Patch
(16.07 KB, patch)
2016-07-08 09:46 PDT
,
Brady Eidson
bfulgham
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2016-07-08 09:42:35 PDT
<
rdar://problem/27206772
>
Brady Eidson
Comment 2
2016-07-08 09:44:23 PDT
Created
attachment 283174
[details]
Patch
Brady Eidson
Comment 3
2016-07-08 09:46:17 PDT
Created
attachment 283175
[details]
Patch
WebKit Commit Bot
Comment 4
2016-07-08 09:47:22 PDT
Attachment 283175
[details]
did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/WebKit2Cocoa/LocalStorageClear.mm:32: Alphabetical sorting problem. [build/include_order] [4] ERROR: Tools/TestWebKitAPI/Tests/WebKit2Cocoa/LocalStorageClear.mm:79: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 2 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andy Estes
Comment 5
2016-07-08 09:52:04 PDT
Comment on
attachment 283175
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=283175&action=review
> Source/WebKit2/UIProcess/Storage/LocalStorageDatabaseTracker.cpp:340 > + WebCore::SQLiteFileSystem::deleteDatabaseFile(path);
No need for the WebCore:: in this file.
> Source/WebKit2/UIProcess/Storage/LocalStorageDatabaseTracker.cpp:346 > + WebCore::SQLiteFileSystem::deleteDatabaseFile(trackerDatabasePath());
Ditto.
Brent Fulgham
Comment 6
2016-07-08 09:56:59 PDT
Comment on
attachment 283175
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=283175&action=review
Looks good. If the tests are happy, go ahead and land it! r=me.
> Source/WebCore/ChangeLog:4 > +
https://bugs.webkit.org/show_bug.cgi?id=159566
<
rdar://problem/27206772
>
> Source/WebKit2/ChangeLog:4 > +
https://bugs.webkit.org/show_bug.cgi?id=159566
<
rdar://problem/27206772
>
> Tools/ChangeLog:4 > +
https://bugs.webkit.org/show_bug.cgi?id=159566
<
rdar://problem/27206772
>
> Tools/TestWebKitAPI/Tests/WebKit2Cocoa/LocalStorageClear.mm:87 > + }];
Nice test! :-)
Brady Eidson
Comment 7
2016-07-08 10:04:12 PDT
https://trac.webkit.org/changeset/202984
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug