Clearing LocalStorage doesn't also delete -wal and -shm files. <rdar://problem/27206772> and https://bugs.webkit.org/show_bug.cgi?id=159566

Reviewed by Brent Fulgham.
Also helpfully picked over by Andy "Never Forgets" Estes.

Source/WebCore:

Covered by new API test.

* WebCore.xcodeproj/project.pbxproj:

* platform/sql/SQLiteFileSystem.h:

Source/WebKit2:

* UIProcess/Storage/LocalStorageDatabaseTracker.cpp:
(WebKit::LocalStorageDatabaseTracker::removeDatabaseWithOriginIdentifier):

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKit2Cocoa/LocalStorageClear.html: Added.
* TestWebKitAPI/Tests/WebKit2Cocoa/LocalStorageClear.mm: Added.

Canonical link: https://commits.webkit.org/177705@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202984 268f45cc-cd09-0410-ab3c-d52691b4dbfc